Updated base styling for App

--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
-html {
-  font-family: "Oxygen", sans-serif;
-}
-
 body {
   margin: 0;
   background-color: whitesmoke;
+  font-family: 'Roboto', sans-serif;
 }
 
 .centered {
-  margin: 3rem auto;
+  width: 420px;
+  height: 100vh;
+  margin: 0 auto;
   text-align: center;
   display: flex;
   justify-content: center;
