--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -34,8 +34,23 @@
   padding: 4px;
   gap: 4px;
 
-  width: 50px;
-  height: 50px;
+  width: 48px;
+  height: 48px;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.hamburger {
+  /* Icons/menu_24px
+
+menu, hamburger, lines, line
+*/
+
+  width: 48px;
+  height: 48px;
 
   /* Inside auto layout */
 
@@ -94,7 +109,7 @@
   flex-grow: 0;
 }
 
-.bell {
+.notification {
   /* Bell */
 
   /* Auto layout */
@@ -106,12 +121,24 @@
   padding: 4px;
   gap: 4px;
 
-  width: 30px;
-  height: 30px;
+  width: 48px;
+  height: 48px;
 
   /* Inside auto layout */
 
   flex: none;
   order: 2;
+  flex-grow: 0;
+}
+.bell {
+  /* Elements / Icons / bell */
+
+  width: 24px;
+  height: 24px;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
   flex-grow: 0;
 }
