--- a/src/components/FamilyPatient.module.css
+++ b/src/components/FamilyPatient.module.css
@@ -1,11 +1,12 @@
 .FamilyPatient {
   /* Family Dashboard_Pre NRIC Verification */
 
-  position: relative;
-  width: 411px;
+  /* position: relative; */
+  /* width: 411px; */
+  width: 100%;
   height: 823px;
-  left: 71px;
-  top: 107px;
+  /* left: 71px;
+  top: 107px; */
   /* overflow-y: scroll; */
 
   background: #ffffff;
@@ -22,11 +23,11 @@
   padding: 32px 24px 16px;
   gap: 4px;
 
-  position: absolute;
+  /* position: absolute; */
   height: 76px;
-  left: 0%;
+  /* left: 0%;
   right: 0%;
-  top: 170px;
+  top: 170px; */
 
   background: #ffffff;
 }
@@ -69,11 +70,12 @@
   align-items: flex-start;
   padding: 0px 0px 64px;
 
-  position: absolute;
-  width: 411px;
+  /* position: absolute;
+  width: 411px; */
+  width: 100%;
   height: 800px;
-  left: 0px;
-  top: 247px;
+  /* left: 0px;
+  top: 247px; */
 }
 .PatientDetails {
   /* Frame 10 */
@@ -86,7 +88,8 @@
   padding: 24px;
   gap: 32px;
 
-  width: 411px;
+  /* width: 411px; */
+  width: 100%;
   height: 220px;
 
   /* M3/ref/tertiary/tertiary90 */
@@ -111,7 +114,8 @@
   padding: 0px;
   gap: 8px;
 
-  width: 235px;
+  /* width: 235px; */
+  width: 100%;
   height: 172px;
 
   /* Inside auto layout */
