--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -10,11 +10,12 @@
   padding: 0px 12px;
   gap: 18px;
 
-  position: absolute;
+  /* position: absolute; */
+  width: 100%;
   height: 64px;
-  left: 0%;
+  /* left: 0%;
   right: 0%;
-  top: 106px;
+  top: 106px; */
 
   /* M3/sys/light/primary */
 
