--- a/src/components/StaffDetails.module.css
+++ b/src/components/StaffDetails.module.css
@@ -9,11 +9,11 @@
   padding: 24px;
   gap: 32px;
 
-  position: absolute;
+  /* position: absolute; */
   height: 144px;
-  left: 0px;
+  /* left: 0px;
   right: 0px;
-  top: 218px;
+  top: 218px; */
 
   /* M3/ref/primary/primary90 */
 
@@ -196,11 +196,11 @@
   padding: 32px 24px 16px;
   gap: 4px;
 
-  position: absolute;
+  /* position: absolute; */
   height: 76px;
-  left: 0%;
+  /* left: 0%;
   right: 0%;
-  top: 362px;
+  top: 362px; */
 }
 .Wards {
   /* Wards */
@@ -240,12 +240,12 @@
   align-items: flex-start;
   padding: 0px 24px;
   gap: 12px;
-
-  position: absolute;
+/* 
+  position: absolute; */
   height: 132px;
-  left: 0%;
+  /* left: 0%;
   right: 0%;
-  top: 438px;
+  top: 438px; */
 }
 
 .WardsFrame {
