--- a/src/components/StaffDetails.module.css
+++ b/src/components/StaffDetails.module.css
@@ -9,11 +9,7 @@
   padding: 24px;
   gap: 32px;
 
-  /* position: absolute; */
   height: 144px;
-  /* left: 0px;
-  right: 0px;
-  top: 218px; */
 
   /* M3/ref/primary/primary90 */
 
@@ -196,11 +192,7 @@
   padding: 32px 24px 16px;
   gap: 4px;
 
-  /* position: absolute; */
   height: 76px;
-  /* left: 0%;
-  right: 0%;
-  top: 362px; */
 }
 .Wards {
   /* Wards */
@@ -240,12 +232,8 @@
   align-items: flex-start;
   padding: 0px 24px;
   gap: 12px;
-/* 
-  position: absolute; */
+
   height: 132px;
-  /* left: 0%;
-  right: 0%;
-  top: 438px; */
 }
 
 .WardsFrame {
@@ -343,6 +331,7 @@
 
   background: #004b64;
   border-radius: 4px;
+  border: none;
 
   /* Inside auto layout */
 
