--- a/src/components/ChatMessage.module.css
+++ b/src/components/ChatMessage.module.css
@@ -30,7 +30,7 @@
   border-radius: 0.75rem;
   border-style: solid;
   border-width: 1px;
-  padding: 0.75rem 0.5rem;
+  padding: 0.75rem;
 
   font-size: 1rem;
   font-weight: 400;
@@ -51,3 +51,4 @@
 .left-side {
   margin-right: auto;
 }
+
