disclaimer text for chat input when user is contact

--- a/src/components/ChatInput.module.css
+++ b/src/components/ChatInput.module.css
@@ -12,3 +12,10 @@
   position: sticky;
   bottom: 0;
 }
+
+.text-disclaimer {
+  font-weight: 400;
+  font-size: 0.6875rem;
+  line-height: 0.8125rem;
+  color: #605D64;
+}
